fix: make categories section responsive and add darkmode for scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import 'tailwindcss';
+@plugin 'tailwind-scrollbar' {
+    nocompatible: true;
+}
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
@@ -13,8 +16,6 @@
     --color-light-primary: #8c9faf;
 }
 
-@layer utilities {
-}
 @keyframes pop-blob {
     0% {
         transform: scale(1);
@@ -37,19 +38,12 @@
     --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #36393e;
-        --foreground: #ededed;
-    }
-}
-
 body {
     background: var(--background);
     color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.animate-pop-blob {
-    animation: pop-blob 5s infinite;
+.scrollable {
+    @apply scrollbar scrollbar-track-[#E5E7EB] scrollbar-thumb-dark-primary dark:scrollbar-track-[#111827] dark:scrollbar-thumb-primary h-screen overflow-y-scroll;
 }
